--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "swiper": "^8.4.7",
     "vue": "^3.2.47",
-    "vue-router": "^4.2.2"
+    "vue-awesome-swiper": "^5.0.1",
+    "vue-router": "^4.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
     "vite": "^4.3.9"
   }
 }
